test_suite/tests/ui/fail/invalid_arg_count_min_max/invalid_arg_count_bool_flag.rs
use clapi::macros::*;

#[command]
#[arg(enable, min=0, max=1)]
fn test(enable: bool){}

fn main(){}