test_suite/tests/ui/fail/invalid_arg_count_min_max/invalid_arg_count_bool_flag.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_count_bool_flag.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid number of arguments for `enable : bool` expected 1
